--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,10 @@ body {
   font-family: 'Lexend Deca', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgba(255, 255, 255, 0.3);
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: 'source-code-pro',' Menlo', 'Monaco','Consolas', 'Courier New',
     monospace;
 }
